uptime-kuma/manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
spec:
  selector:
    app: uptime-kuma

  ports:
    - name: http
      port: 3001
      targetPort: http
      protocol: TCP
